--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,3 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "sqltools.connections": [
-        {
-            "mysqlOptions": {
-                "authProtocol": "default",
-                "enableSsl": "Disabled"
-            },
-            "previewLimit": 50,
-            "server": "localhost",
-            "port": 3306,
-            "driver": "MySQL",
-            "name": "cardealer",
-            "database": "MySQL",
-            "username": "root",
-            "password": "G@607537"
-        }
-    ]
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
